sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: '(' expected but identifier found.
  if ecart>1{
     ^AlgCombSort:14: error: illegal start of simple expression
} 
^